# BGV_Modified

./: CMakeLists.txt  main.cpp  pattern matching basic.txt
modules/algorithm/sfft/: computefourier-1.0-2.0.cc  computefourier-1.0-2.0.h  computefourier-3.0.cc  computefourier-3.0.h  fft.h  fftw.cc  fftw.h  filters.cc  filters.h  intrinsics.h  sfft.cc  sfft.h  timer.cc  timer.h  utils.cc  utils.h
modules/bgv/: BGVSeal.cpp  BGVSeal.h
modules/fhe/: fhe.cpp  fhe.h  fhebuilder.cpp
modules/io/: teestream.h
modules/random/: RandomGenerator.cpp  RandomGenerator.h
modules/she/: common.h  she.cpp  she.h  shebuilder.cpp  shebuilder.h
modules/simulator/: MatchingSimulator.cpp  MatchingSimulator.h  patternmatch.cpp  patternmatch.h
